- Fixed bug #51791 (constant() aborts execution when fail to check undefined constant)